# nklz4cpp

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  conanfile.py  requirements.txt
include/nklz4cpp/: wrapper.hpp
src/: wrapper.cpp
test/: CMakeLists.txt
test/src/: nklz4cpp-test.cpp
